Fix too big code font on mobile

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -307,9 +307,11 @@ pre{
     overflow: auto;
     scrollbar-width: thin;
     line-height: 1.25 !important;
+    font-size: inherit !important;
 }
 
 code{
+    font-size: inherit !important;
     border-radius: 0 !important;
     line-height: inherit !important;
 }
